<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity_detalles_libro">

    <TextView
        android:id="@+id/txt_detalles_titulo_libro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#61CEFF"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/detalles_del_libro"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_detalles_libro"
        android:layout_width="301dp"
        android:layout_height="197dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/nada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalles_titulo_libro"
        app:srcCompat="@drawable/libro" />

    <TextView
        android:id="@+id/txt_detalles_TituloDelLibro"
        android:layout_width="315dp"
        android:layout_height="97dp"
        android:layout_marginTop="4dp"
        android:gravity="center|center_horizontal"
        android:text="@string/titulo_del_libro"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detalles_libro" />

    <TextView
        android:id="@+id/txt_detalles_autor"
        android:layout_width="315dp"
        android:layout_height="97dp"
        android:layout_marginTop="4dp"
        android:gravity="center|center_horizontal"
        android:text="@string/autor_del_libro_detalles"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalles_TituloDelLibro" />

    <TextView
        android:id="@+id/txt_titulo_num_paginas"
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:gravity="center|center_horizontal"
        android:text="@string/numero_de_paginas"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalles_autor" />

    <TextView
        android:id="@+id/txt_num_paginas"
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:gravity="center|center_horizontal"
        android:text="@string/Cero_paginas"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_num_paginas" />

    <TextView
        android:id="@+id/txt_precio"
        android:layout_width="132dp"
        android:layout_height="53dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:gravity="center|center_horizontal"
        android:text="@string/Cero"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_id_libro"
        android:layout_width="70dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:gravity="center|center_horizontal"
        android:text="@string/id_detalles"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>