<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_libros">

    <Button
        android:id="@+id/btn_borrarLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#0091D3"
        android:onClick="Ir_BorrarLibro"
        android:text="@string/borrar_libro"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#5CC1EF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:background="#5CC1EF"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/KelRed"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#61CEFF"
                android:onClick="ir_inicio"
                android:text="@string/inicio"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn_libros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#5CC1EF"
                android:text="@string/libros"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn_comics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#61CEFF"
                android:onClick="ir_comics"
                android:text="@string/comics"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn_ajustes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#61CEFF"
                android:text="@string/ajustes"
                android:textColor="#000000" />
        </LinearLayout>

        <TextView
            android:id="@+id/titulo_oredenarPorAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5CC1EF"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/ordenar_libros_por_autor"
            android:textColor="#000000"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/sp_autores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:minHeight="48dp"
            android:padding="5dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_libros"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:background="#61CEFF"
            tools:itemCount="15" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_insertar_libro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#0091D3"
        android:onClick="Ir_NuevoLibro"
        android:text="@string/nuevo_libro"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>