<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="10dp"
    android:background="#ADE5FF"
    tools:context=".item_comic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Imagen_comic"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="imagen_de_los_comics_a_mostrar"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            app:srcCompat="@drawable/comic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Id_txt_C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/id"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TituloDelComic_txt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/titulo"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/AutorC_txt"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal"
                android:text="@string/autor"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titulo_paginasC"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/numero_de_p_ginas"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/Numero_paginasC_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="2dp"
                    android:paddingEnd="0dp"
                    android:text="@string/_000"
                    android:textColor="#000000"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/PrecioC_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:paddingBottom="3dp"
                android:text="@string/_0_0"
                android:textColor="#000000" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>