<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_borrar_libro">

    <LinearLayout
        android:id="@+id/layout_borrar_libro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_borrar_libro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#61CEFF"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/borrar_libro_txt"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edt_IDaBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/id_del_libro_a_borrar"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="20dp"
            android:singleLine="false"
            android:textColor="#000000"
            android:textColorHint="#4C4C4C"
            android:textStyle="italic" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_borrar_libro"
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:backgroundTint="#0091D3"
        android:onClick="BorrarLibro"
        android:text="Borrar Libro"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_volver_borrar"
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:backgroundTint="#0091D3"
        android:onClick="Volver"
        android:text="@string/volver"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>